<resources>
    <string name="app_name">NavigationDrawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
</resources>
